@@ -1,3 +1,9 @@
+2004-08-09  Andras Varga
+
+	* opp_neddoc.in: on Windows, listing directories which have no .ned 
+	or *.msg on the command line caused opp_neddoc stop with "file not 
+	found" error
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-07-20  Andras Varga
